# quod

./: .gitignore  CLAUDE.md  DEVELOPING.md  GUIDE.md  LANGUAGE.md  README.md  progress.md  pyproject.toml
examples/: callgraph.json  cross_demo.json  derived_range.json  euler_01.json  guarded_inc.json  helloworld.json  libc_abs.json  proven_return.json  quod.toml  range_check.json  run_ls.json  witness_changes_codegen.json
examples/analysis/: callgraph.json  cross_demo.json  libc_abs.json
examples/arenas/: scratch.json  with_arena_scratch.json
examples/basics/: helloworld.json  run_ls.json
examples/c_ingest/: README.md
examples/claims/: derived_range.json  guarded_inc.json  proven_return.json  range_check.json  witness_changes_codegen.json
examples/json/: README.md
examples/json_demo/: program.json
examples/json_v2/: program.json
examples/json_v3/: program.json
examples/project_euler/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json
examples/strings/: slice_and_print.json
examples/structs/: point_dot.json
integrations/: README.md
integrations/claude/: README.md
pi/extensions/: quod.ts
proofs/cross-demo/: g_return_in_range_return_cab3482a222a.smt2
src/cpg/: analysis.py  cli.py  editor.py  hashing.py  lower.py  model.py  proof.py  templates.py
src/quod/: analysis.py  cli.py  completion.py  config.py  editor.py  hashing.py  lower.py  merge.py  model.py  proof.py  providers.py  render.py  runtime.py  schema.py  script.py  stdlib.py  (+1 more)
tests/: conftest.py  test_enum_codegen.py  test_ingest_cli.py  test_script.py
(+110 files in other folders)
