[project]
name = "cpg-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "llvmlite>=0.47.0",
    "pydantic>=2.13.3",
    "typer>=0.25.0",
]

[project.scripts]
cpg = "cpg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpg"]
